--- a/index.html
+++ b/index.html
@@ -5,33 +5,94 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Your Name | Portfolio</title>
     <style>
-        body {
-            font-family: Arial, sans-serif;
+        /* Reset */
+        * {
+            box-sizing: border-box;
             margin: 0;
+            padding: 0;
+        }
+
+        body {
+            font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+            background: linear-gradient(to right, #0f2027, #203a43, #2c5364);
+            color: #f0f0f0;
             line-height: 1.6;
         }
+
         header {
-            background: #333;
-            color: #fff;
-            padding: 1rem 2rem;
+            background: linear-gradient(135deg, #667eea, #764ba2);
+            padding: 2rem 1rem;
             text-align: center;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.3);
         }
+
+        header h1 {
+            font-size: 3rem;
+            text-shadow: 2px 2px 5px rgba(0,0,0,0.4);
+        }
+
+        header p {
+            font-size: 1.2rem;
+            margin-bottom: 1rem;
+        }
+
         nav a {
             color: #fff;
-            margin: 0 15px;
+            margin: 0 1rem;
             text-decoration: none;
+            font-weight: bold;
+            transition: transform 0.2s ease;
         }
+
+        nav a:hover {
+            transform: scale(1.1);
+            text-shadow: 1px 1px 4px #000;
+        }
+
         section {
-            padding: 2rem;
+            padding: 3rem 2rem;
+            max-width: 1000px;
+            margin: auto;
         }
+
+        h2 {
+            font-size: 2.5rem;
+            margin-bottom: 1rem;
+            color: #00c9ff;
+            text-shadow: 1px 1px 4px rgba(0,0,0,0.3);
+        }
+
         .portfolio-item {
-            margin-bottom: 1.5rem;
+            background: rgba(255, 255, 255, 0.1);
+            padding: 1.5rem;
+            border-radius: 15px;
+            margin-bottom: 2rem;
+            box-shadow: 0 8px 20px rgba(0, 0, 0, 0.4);
+            transition: transform 0.3s ease;
         }
+
+        .portfolio-item:hover {
+            transform: scale(1.02) translateY(-5px);
+        }
+
+        .portfolio-item h3 {
+            color: #ffb347;
+        }
+
+        a {
+            color: #70f0ff;
+        }
+
         footer {
+            background: #111;
             text-align: center;
-            padding: 1rem;
-            background: #f4f4f4;
-            margin-top: 2rem;
+            padding: 2rem 1rem;
+            color: #aaa;
+            box-shadow: 0 -4px 10px rgba(0, 0, 0, 0.3);
+        }
+
+        footer p {
+            font-size: 0.9rem;
         }
     </style>
 </head>
@@ -39,7 +100,7 @@
 
     <header>
         <h1>Your Name</h1>
-        <p>Web Developer | Designer | Programmer</p>
+        <p>Creative Web Developer & Designer</p>
         <nav>
             <a href="#about">About</a>
             <a href="#portfolio">Portfolio</a>
@@ -49,24 +110,27 @@
 
     <section id="about">
         <h2>About Me</h2>
-        <p>Hello! I'm a passionate developer who loves building simple and beautiful websites. I specialize in front-end development and have experience with HTML, CSS, JavaScript, and various frameworks.</p>
+        <p>
+            Hi! I'm a passionate developer who loves turning ideas into interactive, beautiful websites. 
+            With a focus on performance and user experience, I build web apps that stand out in design and function.
+        </p>
     </section>
 
     <section id="portfolio">
         <h2>My Work</h2>
         <div class="portfolio-item">
             <h3>Project One</h3>
-            <p>A brief description of your project. Include what technologies you used and your role.</p>
+            <p>This is a modern responsive landing page built with HTML, CSS, and vanilla JavaScript. Features animations, responsive layout, and SEO-optimized structure.</p>
         </div>
         <div class="portfolio-item">
             <h3>Project Two</h3>
-            <p>A brief description of another project. Try to include links if it's live or on GitHub.</p>
+            <p>A full-stack task manager app using Node.js, Express, MongoDB, and React. Includes authentication, real-time updates, and mobile-first design.</p>
         </div>
     </section>
 
     <section id="contact">
         <h2>Contact Me</h2>
-        <p>Feel free to reach out if you'd like to work together or have any questions.</p>
+        <p>If you're interested in working together, feel free to reach out!</p>
         <p>Email: <a href="mailto:your.email@example.com">your.email@example.com</a></p>
         <p>LinkedIn: <a href="https://linkedin.com/in/yourprofile" target="_blank">yourprofile</a></p>
     </section>
